src/objects/Service_Request_History__c.object
<CustomObject>
    <fields>
        <fullName>ANC__c</fullName>
        <label>ANC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressID__c</fullName>
        <label>Address ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AliasName__c</fullName>
        <label>Alias Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHours__c</fullName>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Source__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Case Source</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Date/Time Closed (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email(needs to be deleted)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactFax__c</fullName>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <description>Contact first name mapped to this field</description>
        <label>Contact FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <description>Contact Last name mapped to this field</description>
        <label>Contact LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobile__c</fullName>
        <label>Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <label>Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Date/Time Opened (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeClosed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTimeOpened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is set to true when a Case record has been deleted in SFDC.  It is not set to true when a Service Request has been instead logically archived.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Resolution_Date__c</fullName>
        <label>Expected Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Name__c</fullName>
        <label>External_System_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexNotes__c</fullName>
        <label>FlexNotes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IntersectionId__c</fullName>
        <label>Intersection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed When Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelfServiceClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed by Self-Service User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible in Self-Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Code__c</fullName>
        <label>Jurisdiction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Description__c</fullName>
        <label>Jurisdiction Description</label>
        <length>1028</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Othe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdateDateTime__c</fullName>
        <label>LastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date__c</fullName>
        <label>Last Update Date (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_URL__c</fullName>
        <label>Media URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Neighbor_Hood_Cluster__c</fullName>
        <label>Neighbor Hood Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>311-App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <label>PSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Service_Request_Id__c</fullName>
        <label>Parent Service Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Dispute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quadrant__c</fullName>
        <label>Quadrant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>User didn&apos;t attend training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions not clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New problem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <label>Resolution Date (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoadwaySegId__c</fullName>
        <label>RoadwaySegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Met_Days__c</fullName>
        <formula>IF( 
(IsClosed__c &amp;&amp;(Expected_Resolution_Date__c &gt;= DateTimeClosed__c) &amp;&amp; SLA_Type__c == &apos;Calendar days&apos;), 

(Expected_Resolution_Date__c - DateTimeClosed__c), 

( 
IF( 
(IsClosed__c &amp;&amp;(Expected_Resolution_Date__c &gt;= DateTimeClosed__c) &amp;&amp; SLA_Type__c == &apos;Business days&apos;), 
CASE(MOD( DATEVALUE(DateTimeClosed__c) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((DATEVALUE(Expected_Resolution_Date__c ) - DATEVALUE(DateTimeClosed__c))/7)*5) 
,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Met Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Met__c</fullName>
        <formula>if(SLA_Status__c=&apos;Met&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Missed_Days__c</fullName>
        <formula>IF( 
(IsClosed__c &amp;&amp;(DateTimeClosed__c &gt; Expected_Resolution_Date__c) &amp;&amp; SLA_Type__c == &apos;Calendar days&apos;), 

(DateTimeClosed__c - Expected_Resolution_Date__c), 

( 
IF( 
(IsClosed__c &amp;&amp;(DateTimeClosed__c &gt; Expected_Resolution_Date__c) &amp;&amp; SLA_Type__c == &apos;Business days&apos;), 
CASE(MOD( DATEVALUE(Expected_Resolution_Date__c) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(DateTimeClosed__c) - DATEVALUE(Expected_Resolution_Date__c) )/7)*5) 
,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Missed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Missed__c</fullName>
        <formula>if(SLA_Status__c=&apos;Missed&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Open__c</fullName>
        <formula>if(SLA_Status__c=&apos;Open&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Overdue__c</fullName>
        <formula>If(SLA_Status__c=&apos;Overdue&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>if( IsClosed__c,
    if ( DateTimeClosed__c &lt;= BlankValue(Expected_Resolution_Date__c, Now()), 
         &apos;Met&apos;, &apos;Missed&apos; ),
    if ( Now() &lt;= BlankValue(Expected_Resolution_Date__c, Now()) , 
         &apos;Open&apos;, &apos;Overdue&apos; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMD__c</fullName>
        <label>SMD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRType_Jurisdiction__c</fullName>
        <label>SR Type Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRType__c</fullName>
        <label>Service Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Due_Date__c</fullName>
        <label>Service Due Date (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Note__c</fullName>
        <label>Service Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request_Id__c</fullName>
        <externalId>true</externalId>
        <label>Service Request Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Source_Code__c</fullName>
        <label>Service Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type_Code_Description__c</fullName>
        <label>Service Type Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type_Code__c</fullName>
        <label>Service Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Agency__c</fullName>
        <label>Servicing Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnowRoute__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Snow Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnowZone__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Snow Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Incomplete Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate (Closed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate (Opened)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <label>Ward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XCOORD__c</fullName>
        <label>XCOORD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YCOORD__c</fullName>
        <label>YCOORD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Request History</label>
    <listViews>
        <fullName>Homeless_Services_Service_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Homeless Services</label>
        <queue>Homeless_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OUC_DPW_Queue_Service_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>OUC DPW Queue</label>
        <queue>OUC_DPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OUC_SNOW_Queue_Service_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>OUC SNOW Queue</label>
        <queue>OUC_SNOW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Serve_DC_Queue_Service_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Serve DC Queue</label>
        <queue>Serve_DC_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X311_info_dc_gov_Email_to_Case_Queue_Service_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>311.info@dc.gov Email to Case Queue</label>
        <queue>X311_info_dc_gov_Email_to_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Service Request History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Request Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>